fixed horizontal spacing

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ nav{
     display: flex;
     justify-content: flex-end;
     width: 100vw;
+    max-width: 100%;
     flex-direction: row;
     z-index: 1;
 }
@@ -398,7 +399,8 @@ modal{
     display: none;
     flex-direction: column;
     justify-content: center;
-    max-width: 100vw;
+    width: 100vw;
+    max-width: 100%;
 }
 
 #close{
@@ -410,10 +412,6 @@ modal{
 #close h2 {
     margin: 0;
     cursor: pointer;
-}
-
-#leftContain {
-    width: 100vw;
 }
 
 #projectLeft{
